...
                            </button>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ddF-Q3-SSw" userLabel="Background Color">
                                <rect key="frame" x="150" y="118" width="300" height="300"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6" textAlignment="center" lineBreakMode="tailTruncation" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="s4K-Ax-Fg6">
                                        <rect key="frame" x="45" y="45" width="210" height="210"/>
                                        <accessibility key="accessibilityConfiguration" identifier="PersonCount"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="190"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <nil key="highlightedColor"/>
                                        <variation key="heightClass=regular-widthClass=compact">
                                            <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        </variation>
...
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CuK-ht-tKj" userLabel="Plus Button">
                                <rect key="frame" x="360" y="118" width="90" height="90"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="CuK-ht-tKj" secondAttribute="height" multiplier="1:1" id="exP-e5-Gy9"/>
                                </constraints>
                                <state key="normal" image="PurplePlusButton">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="increaseNumPeople:" destination="qph-AE-zJM" eventType="touchUpInside" id="PrN-ZP-CZc"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KpA-c6-5lf" userLabel="Minus Button">
                                <rect key="frame" x="150" y="336" width="90" height="90"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="KpA-c6-5lf" secondAttribute="height" multiplier="1:1" id="VCt-uZ-YjR"/>
                                </constraints>
                                <state key="normal" image="PurpleMinusButton">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="decreaseNumPeople:" destination="qph-AE-zJM" eventType="touchUpInside" id="E24-8Y-Psc"/>
                                </connections>
                            </button>
...
